--- a/Source/WebApi/wwwroot/swagger/ui/index.html
+++ b/Source/WebApi/wwwroot/swagger/ui/index.html
@@ -1,4 +1,4 @@
-<!-- HTML for static distribution bundle build -->
+﻿<!-- HTML for static distribution bundle build -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -50,10 +50,10 @@
           SwaggerUIBundle.plugins.DownloadUrl
         ],
         layout: "StandaloneLayout"
-      })
-      // End Swagger UI call region
+      });
+        // End Swagger UI call region
 
-      window.ui = ui
+      window.ui = ui;
     }
   </script>
   </body>
