--- a/Source/WebApi/wwwroot/swagger/ui/oauth2-redirect.html
+++ b/Source/WebApi/wwwroot/swagger/ui/oauth2-redirect.html
@@ -5,7 +5,8 @@
 </html>
 <script>
     'use strict';
-    function run () {
+
+    function run() {
         var oauth2 = window.opener.swaggerUIRedirectOauth2;
         var sentState = oauth2.state;
         var redirectUrl = oauth2.redirectUrl;
@@ -17,39 +18,47 @@
             qp = location.search.substring(1);
         }
 
-        arr = qp.split("&")
-        arr.forEach(function (v,i,_arr) { _arr[i] = '"' + v.replace('=', '":"') + '"';})
-        qp = qp ? JSON.parse('{' + arr.join() + '}',
-                function (key, value) {
-                    return key === "" ? value : decodeURIComponent(value)
+        arr = qp.split("&");
+        arr.forEach(function(v, i, _arr) { _arr[i] = '"' + v.replace('=', '":"') + '"'; });
+        qp = qp
+            ? JSON.parse('{' + arr.join() + '}',
+                function(key, value) {
+                    return key === "" ? value : decodeURIComponent(value);
                 }
-        ) : {}
+            )
+            : {};
 
-        isValid = qp.state === sentState
+        isValid = qp.state === sentState;
 
         if ((
-          oauth2.auth.schema.get("flow") === "accessCode"||
-          oauth2.auth.schema.get("flow") === "authorizationCode"
-        ) && !oauth2.auth.code) {
+                oauth2.auth.schema.get("flow") === "accessCode" ||
+                    oauth2.auth.schema.get("flow") === "authorizationCode"
+            ) &&
+            !oauth2.auth.code) {
             if (!isValid) {
                 oauth2.errCb({
                     authId: oauth2.auth.name,
                     source: "auth",
                     level: "warning",
-                    message: "Authorization may be unsafe, passed state was changed in server Passed state wasn't returned from auth server"
+                    message:
+                        "Authorization may be unsafe, passed state was changed in server Passed state wasn't returned from auth server"
                 });
             }
 
             if (qp.code) {
                 delete oauth2.state;
                 oauth2.auth.code = qp.code;
-                oauth2.callback({auth: oauth2.auth, redirectUrl: redirectUrl});
+                oauth2.callback({ auth: oauth2.auth, redirectUrl: redirectUrl });
             } else {
-                let oauthErrorMsg
+                let oauthErrorMsg;
                 if (qp.error) {
-                    oauthErrorMsg = "["+qp.error+"]: " +
-                        (qp.error_description ? qp.error_description+ ". " : "no accessCode received from the server. ") +
-                        (qp.error_uri ? "More info: "+qp.error_uri : "");
+                    oauthErrorMsg = "[" +
+                        qp.error +
+                        "]: " +
+                        (qp.error_description
+                            ? qp.error_description + ". "
+                            : "no accessCode received from the server. ") +
+                        (qp.error_uri ? "More info: " + qp.error_uri : "");
                 }
 
                 oauth2.errCb({
@@ -60,7 +69,7 @@
                 });
             }
         } else {
-            oauth2.callback({auth: oauth2.auth, token: qp, isValid: isValid, redirectUrl: redirectUrl});
+            oauth2.callback({ auth: oauth2.auth, token: qp, isValid: isValid, redirectUrl: redirectUrl });
         }
         window.close();
     }
