--- a/Source/WebApi/wwwroot/index.html
+++ b/Source/WebApi/wwwroot/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet"><title>1csupport</title><link href="/static/css/app.70f7c76ef1627cb30b4807d8d4290050.css" rel="stylesheet">
-</head>
-<body>
-<div id="app"></div><script type="text/javascript" src="/static/js/manifest.2ae2e69a05c33dfc65f8.js"></script><script type="text/javascript" src="/static/js/vendor.21f29fcfb909b5816798.js"></script><script type="text/javascript" src="/static/js/app.5f530dfe8c94d808e293.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>1cSupportFront</title><link href=/css/app.4d8140da.css rel=preload as=style><link href=/css/chunk-vendors.8f029363.css rel=preload as=style><link href=/js/app.488eacea.js rel=preload as=script><link href=/js/chunk-vendors.83adc923.js rel=preload as=script><link href=/css/chunk-vendors.8f029363.css rel=stylesheet><link href=/css/app.4d8140da.css rel=stylesheet></head><body><noscript><strong>We're sorry but 1cSupportFront doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.83adc923.js></script><script src=/js/app.488eacea.js></script></body></html>
